<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:focusable="true"
        android:autofillHints="" />

    <TextView
        android:id="@+id/degreeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_degree"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        app:layout_constraintStart_toStartOf="@+id/nameET"
        android:layout_marginTop="50dp"
        />
    
    <Spinner
        android:id="@+id/degreeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/degreeTV"
        app:layout_constraintStart_toStartOf="@+id/degreeTV"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SGPABtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@id/CGPABtn"
        app:layout_constraintTop_toBottomOf="@+id/degreeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sgpa"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CGPABtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/SGPABtn"
        app:layout_constraintTop_toBottomOf="@+id/degreeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cgpa"/>

</androidx.constraintlayout.widget.ConstraintLayout>