<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SGPAActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/degreeTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/degreeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterDetailsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/enter_details"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterDetailsTV">

            <TextView
                android:id="@+id/subjectsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/subject"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/mainCL"
                app:layout_constraintTop_toTopOf="@+id/mainCL"

                />

            <TextView
                android:id="@+id/creditsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subject_credits"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/subjectsTV"
                app:layout_constraintStart_toEndOf="@+id/subjectsTV"
                app:layout_constraintTop_toTopOf="@+id/subjectsTV" />

            <TextView
                android:id="@+id/gradesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subject_grades"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/creditsTV"
                app:layout_constraintStart_toEndOf="@+id/creditsTV"
                app:layout_constraintTop_toTopOf="@+id/creditsTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sub1LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="@+id/mainCL"
            app:layout_constraintStart_toStartOf="@+id/mainCL"
            app:layout_constraintTop_toBottomOf="@+id/mainCL">

            <TextView
                android:id="@+id/sub1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subject_1"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/sub1LL"
                app:layout_constraintTop_toTopOf="@id/sub1LL" />

            <EditText
                android:id="@+id/sub1Credit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:ems="2"

                android:hint="@string/credits"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/sub1TV"
                app:layout_constraintStart_toEndOf="@+id/sub1TV"
                app:layout_constraintTop_toTopOf="@+id/sub1TV" />

            <Spinner
                android:id="@+id/sub1Grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"

                app:layout_constraintBottom_toBottomOf="@+id/sub1Credit"
                app:layout_constraintStart_toEndOf="@+id/sub1Credit"
                app:layout_constraintTop_toTopOf="@+id/sub1Credit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sub2LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="@+id/sub1LL"
            app:layout_constraintStart_toStartOf="@+id/sub1LL"
            app:layout_constraintTop_toBottomOf="@+id/sub1LL">

            <TextView
                android:id="@+id/sub2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subject_2"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/sub2LL"
                app:layout_constraintTop_toTopOf="@id/sub2LL" />

            <EditText
                android:id="@+id/sub2Credit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:ems="2"
                android:hint="@string/credits"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/sub2TV"
                app:layout_constraintStart_toEndOf="@+id/sub2TV"
                app:layout_constraintTop_toTopOf="@+id/sub2TV" />

            <Spinner
                android:id="@+id/sub2Grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"

                app:layout_constraintBottom_toBottomOf="@+id/sub2Credit"
                app:layout_constraintStart_toEndOf="@+id/sub2Credit"
                app:layout_constraintTop_toTopOf="@+id/sub2Credit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sub3LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="@+id/sub2LL"
            app:layout_constraintStart_toStartOf="@+id/sub2LL"
            app:layout_constraintTop_toBottomOf="@+id/sub2LL">

            <TextView
                android:id="@+id/sub3TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subject_3"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/sub3LL"
                app:layout_constraintTop_toTopOf="@id/sub3LL" />

            <EditText
                android:id="@+id/sub3Credit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:ems="2"
                android:hint="@string/credits"
                android:inputType="numberDecimal"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/sub3TV"
                app:layout_constraintStart_toEndOf="@+id/sub3TV"
                app:layout_constraintTop_toTopOf="@+id/sub3TV" />

            <Spinner
                android:id="@+id/sub3Grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/sub3Credit"
                app:layout_constraintStart_toEndOf="@+id/sub3Credit"
                app:layout_constraintTop_toTopOf="@+id/sub3Credit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toStartOf="@id/resultTV"
            app:layout_constraintTop_toBottomOf="@+id/sub3LL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:text="@string/enter"/>

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/enterBtn"
            app:layout_constraintTop_toBottomOf="@+id/sub3LL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:text=""/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>